@@ -5,9 +5,8 @@
             :url "http://www.eclipse.org/legal/epl-v10.html"}
   :dependencies [[org.clojure/clojure "1.8.0"]
                  [hiccup "1.0.5"]
-                 [http-kit "2.2.0"]
+                 [http-kit "2.3.0-alpha5"]
                  [hawk "0.2.11"]]
   :main ^:skip-aot immotile.core
-  :jvm-opts ["--add-modules" "java.xml.bind"]
   :target-path "target/%s"
   :profiles {:uberjar {:aot :all}})
